# gfftools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gclib/: CMakeLists.txt  GBase.cpp  GBase.h  GHash.hh  GList.hh  GStr.h  gff.cpp  gff.h
src/: CMakeLists.txt  extUtr.cpp  gff2refFlat.cpp  mRNA_length.cpp
